make a test more effective