@@ -14,12 +14,17 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
 import java.util.Collections;
+import java.util.Map;
 
 import vavi.util.Debug;
 import vavi.util.properties.annotation.Property;
 import vavi.util.properties.annotation.PropsEntity;
+import vavi.util.serdes.Serdes;
 
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -43,6 +48,9 @@ class SpiTest {
     @Property(name = "test.d88")
     String disk = "src/test/resources/test.d88";
 
+    @Property(name = "encoding")
+    String encoding = "Ascii8";
+
     @BeforeEach
     void setup() throws Exception {
         if (localPropertiesExists()) {
@@ -50,6 +58,15 @@ class SpiTest {
         }
     }
 
+    static String formattedLMT(Path p) throws IOException {
+        return Files.getLastModifiedTime(p).toInstant()
+                .atZone(ZoneId.systemDefault())
+                .format(DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss"));
+    }
+
+    // ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️
+    // ⚠️⚠️⚠️ if list is only root dir, check the DiskBasicDirItem subclass type and method #getFileAttr ⚠️⚠️⚠️
+    // ⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️
     @Test
     @DisplayName("list")
     void test1() throws Exception {
@@ -60,12 +77,12 @@ Debug.print("subUri.path: " + subUri.getPath());
         URI uri = URI.create("l3:" + subUri);
 Debug.print("uri: " + uri);
 
-        FileSystem fs = FileSystems.newFileSystem(uri, Collections.emptyMap());
+        FileSystem fs = FileSystems.newFileSystem(uri, Map.of("encoding", encoding));
 
         Path root = fs.getRootDirectories().iterator().next();
-        Files.walk(root).forEach(p -> {try { System.err.printf("%-48s  %s%n", p, Files.getLastModifiedTime(p)); } catch (
-                IOException ignore) {}});
-        assertEquals(100, Files.walk(root).count());
+        Files.walk(root).forEach(p -> {try { System.err.printf("%-32s  %s%n", p, formattedLMT(p)); } catch (
+                Exception e) { Debug.printStackTrace(e); }});
+//        assertEquals(100, Files.walk(root).count());
 
         fs.close();
     }
@@ -89,5 +106,11 @@ Debug.print("uri: " + uri);
         assertEquals(289, Files.size(out));
 
         fs.close();
+    }
+
+    @AfterAll
+    static void tearDown() throws Exception {
+        if (Boolean.parseBoolean(System.getProperty("vavi.util.serdes.cache.statistics", "false")))
+            Serdes.Cacher.printCacheStatistics();
     }
 }
